fix: missing var for dark mode

--- a/assets/scss/themes.scss
+++ b/assets/scss/themes.scss
@@ -142,6 +142,7 @@
   --question--answers-number--no-answers--background-color: #d13f2f;
   --question--answers-number--with-best-answer--background-color: #27ae60;
   --question--title--text-color: #4aa3df;
+  --question--closed-icon--background-color: #2c3e50;
   --question--closed-icon--hover--background-color: #c0392b;
   --question--favourite--border-color: #8e44ad;
 
